Try exception history dark mode fix

--- a/Frontend/styleReport.css
+++ b/Frontend/styleReport.css
@@ -164,6 +164,10 @@ h4 {
     color: #000000;
 }
 
+.dark-modeCellException {
+  background-color: #696969 !important;
+}
+
 /*Dark mode styling for hovering over cells*/
 .dark-modeCell tr:hover{
     background-color: #adadad;
